let's handle 404 properly
